tests/paczka1/fuzzy1/24794653.err
Error in line 2: MOAs S566 65,8
Error in line 11: oOXbuIQ S138 6,2
Error in line 25: 83tu S138 0,0
Error in line 26: 83tu A329 21,3
Error in line 19: pNPwrouW9xC S566 51,9
Error in line 36: S566 A609 88,2
